--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <h1 class="hero-title load-hidden">
           Hi, my name is <span class="text-color-main">Yash Viradia</span>
           <br />
-          I'm the Software Engineer.
+          Software Engineer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -156,7 +156,6 @@
                 <div>
                   <p class="mb-4">
                     This is an interactive reactjs app. It was made to practice interactivity and component layout in reactjs.
-                    Image will be uploaded soon.
                   </p>
                 </div>
                 <a
@@ -190,7 +189,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/robofriends_app.png"
                     />
                   </div>
                 </a>
